# aylp_alsa

./: README.md  aylp_alsa.c  aylp_alsa.h  meson.build  test.c
contrib/: conf_test.json
